--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://devmunro.github.io/helper-project",
+  "homepage": "http://devmunro.github.io/helper-project/",
   "name": "helper-project",
   "version": "0.1.0",
   "private": true,
